# hubbard-model-ed

./: Cargo.toml  LICENSE  README.md  build.rs
Data/: eigen_values.csv
src/: array_utils.rs  file_utils.rs  fock_space.rs  main.rs
