[package]
name = "hubbies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2"
rayon = "1.7.0"
itertools = "0.10.5"
lapack = "0.19.0"
indicatif = "0.17.1"
ndarray = { version = "0.15.0", features = ["blas"] }

[profile.release]
panic = "abort"
incremental = true
codegen-units = 1
lto = false
